--- a/8A_class/index.html
+++ b/8A_class/index.html
@@ -1,3 +1,51 @@
 <html>
+    <head>
+        <title>My test site</title>
+        <!-- <link href = "../css/index.css" type="stylesheet"/> -->
+    </head>
+    <body>
+        <p>asdfghjkjuytrew</p>
+        <h1>Title 1</h1>
+        <h2>Title 2</h2>
+        <h3>Title 3 </h3>
+        <h4>Title 4</h4>
+        <h5>Title 5</h5>
+        <h6>Title 6</h6>
+        <small>Text is small</small>
+
+        <p>
+            <b>Bald text</b>
+            <u>Underlined text</u>
+            <em>Italic text</em>
+            
+        </p>
+        <mark>Marked text</mark>
+        <small>Another small text</small>
+        <a href="https://www.google.bg/?hl=bg" >Link to Google</a>
+        <a href="../8V_class/index.html">Link to V class materials</a>
     
+        <!-- <img src="https://tinyjpg.com/images/social/website.jpg" title = "panda"/> -->
+        <img src = "index.png" alt = "invalid picture of a slon"/>
+    <div>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a>Contact</a></li>
+            <li><a>Shop</a></li>
+            <li><a>Home</a></li>
+        </ul>
+    </div>
+        <ol>
+            <li><a href="#about">A<h1>b</h1>out</a></li>
+            <li><a>Contact</a></li>
+            <li><a>Shop</a></li>
+            <li><a>Home</a></li>
+        </ol>
+
+        <div>
+            <h3>Title</h3>
+            <p>Description</p>
+            <small>Date of creation</small>
+        </div>
+        <button >Button</button>
+    </body>
 </html>
