--- a/8V_class/index.html
+++ b/8V_class/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>My test site</title>
-    <!-- <link href = "./index.css" type="stylesheet"/>  -->
+    <link href = "./style.css" rel="stylesheet"/> 
   </head>
   <body>
     <h1>Title 1</h1>
@@ -19,10 +19,11 @@
     <img src = "https://www.pexels.com/photo/green-and-blue-peacock-feather-674010/" alt="Image of a feather"/>
 
     <ul>
-        <li><a href = "#about">About</a></li>
+        <li><a href = "#about" style="color: aqua;">About</a></li>
         <li>Contact</li>
         <li>Shop</li>
     </ul>
+
 
     <ol>
         <li>About</li>
@@ -30,11 +31,23 @@
         <li>Shop</li>
     </ol>
 
-    <div>
-        <h1>Title</h1>
+    <div class = "parent" id="parent_div">
+      <div class = "card">
+        <h1>Title 1</h1>
         <p>Description</p>
         <small>Date of creation</small>
     </div>
+    <div class="card">
+      <h1>Title 2</h1>
+      <p>Description</p>
+      <small>Date of creation</small>
+  </div>
 
+    <div>    
+        <p>Description</p>
+        <h1>Title 3</h1>
+        <small>Date of creation</small>
+    </div>
+    </div>
   </body>  
 </html>
