8A code from class

--- a/8A_class/index.html
+++ b/8A_class/index.html
@@ -1,3 +1,51 @@
 <html>
-    
+
+<head>
+    <title>My test site</title>
+    <link href="./style.css" rel="stylesheet" />
+</head>
+
+<body>
+    <h1>Title 1</h1>
+    <h2 style=" color: aquamarine;">Title 2</h2>
+    <h3>Title 3 </h3>
+    <h4>Title 4</h4>
+    <h5>Title 5</h5>
+    <h6>Title 6</h6>
+
+
+    <a href="https://Google.com">Link to google</a>
+
+    <ul>
+        <li><a href="#about">About</a></li>
+        <li>Contact</li>
+        <li>Shop</li>
+    </ul>
+
+    <ol>
+        <li>About</li>
+        <li>Contact</li>
+        <li>Shop</li>
+    </ol>
+
+    <div class="parent" id="parent_div">
+        <div class="card">
+            <h1>Title 1</h1>
+            <p>Description</p>
+            <small>Date of creation</small>
+        </div>
+        <div class="card">
+            <h1>Title 2</h1>
+            <p>Description</p>
+            <small>Date of creation</small>
+        </div>
+
+        <div>
+            <p>Description</p>
+            <h1>Title 3</h1>
+            <small>Date of creation</small>
+        </div>
+    </div>
+</body>
+
 </html>
